--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,208 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main {
+  padding: 1rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.appLayout {
+  position: relative;
+  width: 100vw;
+  padding-bottom: 4rem;
   min-height: 100vh;
+}
+
+.app-header {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
+  font-weight: bold;
+  font-size: 2rem;
+  border-bottom: 1px solid black;
+  padding: 1rem;
+} 
+
+.app-footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  font-weight: bold;
+  text-align: center;;
+  padding: 1rem;
+  background-color: rgb(236, 232, 232);
+} 
+
+ .menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: white;
+  width: 80%;
+  height: 100%;
+  z-index: 50;
+}
+
+.menuMask {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100%;
+  z-index: 50;
+} 
+
+.menuHead {
+  padding: 1.5rem 0 1.5rem 1rem;
+  border-bottom: 1px solid black;
+}
+
+.menuButton {
+  display: block;
+  color: rgb(32, 202, 253);
+  text-decoration: none;
+  padding: 1rem 0 1rem 1rem;
+  border-bottom: 1px solid black;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.loader-layout {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.loader {
+    border: 5px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 5px solid #3498db;
+    width: 50px;
+    height: 50px;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+}
+
+.productImageLayout {
+  border: 1px solid black;
+  width: 100%;
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+  overflow: hidden;
+}
+
+.productDetailImage > img {
+  width: 100%;
+  object-fit: cover;
+}
+
+.productDetailPrice {
+  text-align: right;
+  margin-bottom: 1rem;
+}
+
+.productImage {
+  background-color: rgb(32, 202, 253);
+  width: 100%; 
+  height: 35vh;
+  background-position: center;
+  background-repeat: no-repeat; 
+  background-size: cover;
+}
+
+.productDetails {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+}
+
+.productDetailsLink {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.productDetailsLink:hover {
+  color: rgb(32, 202, 253);
+}
+
+.viewButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem auto;
+  width: 80%;
+  height: 40px;
+  border-radius: 5px;
+  background-color: rgb(32, 202, 253);
   color: white;
+  text-decoration: none;
 }
 
-.App-link {
-  color: #61dafb;
+.viewButton:hover {
+  color: rgb(32, 202, 253);
+  background-color: white;
+  border: 1px solid rgb(32, 202, 253);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media only screen and (min-width: 1024px) {
+
+  h1 {
+    font-size: 5rem;
+    text-align: center;
   }
-  to {
-    transform: rotate(360deg);
+
+  .productImageLayout {
+    width: 60%;
+    margin: 3rem auto;
+    font-size: 2rem;
+  }  
+
+  .productImage {
+  height: 60vh;  
   }
+
+  .product {
+    font-size: 2rem;
+  }
+
+  .productDetailImage {
+    text-align: center;
+  }
+
+  .productDetailImage > img {
+    width: 50%;
+    object-fit: cover;
+  }
+
+  .productDetailPrice {
+    text-align: center;
+  }
+
+  .productDetailDesc {
+    margin: 2rem;
+    text-align: center;
+  }
+
+  .viewButton {
+  width: 25%;
+  margin-top: 2rem;
+  height: 60px;
+  }
+
+}
+/* Safari */
+@-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
